.env file configured

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,8 @@ lib-cov
 *.out
 *.pid
 
+################################################
+# Environment variables
+################################################
+
+.env
